--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Hello</h1>
+        <h1>Heyyy</h1>
+        <h2>yiiippieeeeee</h2>
     </body>
 </html>
