--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="">
-        <title>Portfolio</title>
+        <title>Melissa Zimmermann</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
