--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Melissa Zimmermann</h1>
         <h2>yiiippieeeeee</h2>
         <p><a></a></p>
-        <img src="me.jpeg" alt="yippie" style="float: left; margin-right: 10px;">
+        <img src="me.jpeg" alt="yippie">
 
     </body>
 </html>
