--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <h2>yiiippieeeeee</h2>
         <p><a></a></p>
         <img src="me.jpeg" alt="yippie">
+        <div>
+            <button type=button></button>
+        </div>
 
     </body>
 </html>
