--- a/index.html
+++ b/index.html
@@ -7,13 +7,42 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Melissa Zimmermann</h1>
-        <h2>yiiippieeeeee</h2>
-        <p><a></a></p>
-        <img src="me.jpeg" alt="yippie">
-        <div>
-            <button type=button></button>
-        </div>
+        
+
+        <header>
+            <div class="hero">
+                    <h1>Melissa Zimmermann</h1>
+                    <img src="" alt="">
+            </div>
+            <nav>
+                <a href="#alpha">alpha</a> 
+                <a href="#bravo">bravo</a>
+                <a href="#charlie">charlie</a>
+            </nav>
+        </header>
+
+        <main>
+            <section id="alpha">
+                <h1>alpha</h1>
+                <div class="row">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt provident earum rerum id, ipsa tempora architecto voluptatem maiores atque. Consectetur, minima iure voluptate est doloremque ipsam consequuntur aperiam odit quaerat!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt provident earum rerum id, ipsa tempora architecto
+                        voluptatem maiores atque. Consectetur, minima iure voluptate est doloremque ipsam consequuntur aperiam odit quaerat!
+                    </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt provident earum rerum id, ipsa tempora architecto
+                        voluptatem maiores atque. Consectetur, minima iure voluptate est doloremque ipsam consequuntur aperiam odit quaerat!
+                    </p>
+                </div>
+            </section>
+
+            <section id="bravo">
+                <h1>bravo</h1>
+            </section>
+
+            <section id="charlie">
+                <h1>charlie</h1>
+            </section>
+        </main>
 
     </body>
 </html>
