--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 
         <header id="top">
             <div class="hero">
+                <div class="text">
+                    <h1>Melissa<br> Zimmermann</h1>
+                    <p>bla bla bla</p>
+                </div>
                 <div class="image">
-                    <img src="" alt="">
+                    <img src="img/meee.png" alt="that's me">
                 </div><!-- .image --> 
 
-                <div class="texte">
-                    <h1>Melissa Zimmermann</h1>
-                    <p>bla bla bla</p>
-                </div><!-- .texte-->
 
                     
                     
